--- a/PacificRimRobot/web/index.html
+++ b/PacificRimRobot/web/index.html
@@ -11,11 +11,8 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <form action="org.apache.struts2.dispatcher.FilterDispatcher">
-            Username <input type="text" name="username" value="" /><br/>
-            Password <input type="password" name="password" value="" />
-            <input type="submit" value="SignIn" name="action" />
-            <input type="reset" value="Reset" name="action" />
-        </form>
+        <h1>You are :</h1>
+        <a href="generalLogin">General</a><br/>
+        <a href="pilotLogin">Pilot</a><br/>
     </body>
 </html>
